--- a/payroll/views/hr_contract_views.xml
+++ b/payroll/views/hr_contract_views.xml
@@ -5,7 +5,7 @@
         <field name="model">hr.contract</field>
         <field name="inherit_id" ref="hr_contract.hr_contract_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='salary_and_advantages']" position="inside">
+            <xpath expr="//group[@name='salary']" position="inside">
                 <field name="struct_id" required="1" />
                 <field name="company_id" groups="base.group_multi_company" />
                 <field name="currency_id" invisible="1" />
