--- a/payroll/views/hr_rule_parameter_views.xml
+++ b/payroll/views/hr_rule_parameter_views.xml
@@ -5,25 +5,26 @@
         <field name="model">hr.rule.parameter</field>
         <field name="arch" type="xml">
             <form string="Salary Rule Parameter">
-                <sheet>
-                    <group>
-                        <field name="name" />
-                        <field name="code" />
-                    </group>
-                    <group string="Versions">
-                        <field
-                            name="parameter_version_ids"
-                            nolabel="1"
-                            context="{'default_rule_parameter_id': active_id}"
-                        >
-                            <tree editable="bottom">
-                                <field name="date_from" />
-                                <field name="parameter_value" />
-                            </tree>
-                        </field>
-                    </group>
-                    <field name="description" placeholder="Description" />
-                </sheet>
+                <group>
+                    <field name="name" required="True" />
+                    <field name="code" />
+                </group>
+
+                <group string="Versions">
+                </group>
+
+                <field name="parameter_version_ids"
+                    nolabel="1"
+                    context="{'default_rule_parameter_id': active_id}"
+                >
+                    <tree editable="bottom">
+                        <field name="date_from" />
+                        <field name="parameter_value" />
+                    </tree>
+                </field>
+
+                <field name="description" placeholder="Description" />
+
             </form>
         </field>
     </record>
