--- a/payroll/views/report_payslip.xml
+++ b/payroll/views/report_payslip.xml
@@ -98,16 +98,16 @@
                                     <td>
                                         <span t-field="line.name" />
                                     </td>
-                                    <td>
+                                    <td class="text-end">
                                         <span t-field="line.quantity" />
                                     </td>
-                                    <td>
+                                    <td class="text-end">
                                         <span
                                             t-esc="line.amount"
                                             t-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'
                                         />
                                     </td>
-                                    <td>
+                                    <td class="text-end">
                                         <span
                                             t-esc="line.total"
                                             t-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'
@@ -116,7 +116,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <p class="text-right">
+                        <p class="text-end">
                             <strong>Authorized signature</strong>
                         </p>
                     </div>
