--- a/payroll/views/report_payslip.xml
+++ b/payroll/views/report_payslip.xml
@@ -89,7 +89,7 @@
                             </thead>
                             <tbody>
                                 <tr
-                                    t-foreach="o.line_ids.filtered(lambda line: line.appears_on_payslip)"
+                                    t-foreach="o.line_ids.filtered(lambda line: line.appears_on_payslip and line.quantity != 0)"
                                     t-as="line"
                                 >
                                     <td>
@@ -99,7 +99,7 @@
                                         <span t-field="line.name" />
                                     </td>
                                     <td class="text-end">
-                                        <span t-field="line.quantity" />
+                                        <span t-esc="'{:g}'.format(line.quantity) if round(line.quantity,0)!=line.quantity else '{:.0f}'.format(line.quantity) if line.rate==100.00 else ('{:g}%'.format(line.rate) if round(line.rate,0)!=line.rate else '{:.0f}%'.format(line.rate))" />
                                     </td>
                                     <td class="text-end">
                                         <span
