--- a/payroll/report/report.xml
+++ b/payroll/report/report.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <record id="action_contribution_register" model="ir.actions.report">
-        <field name="name">Payslip Lines</field>
+        <field name="name">Payslip Contribution Register Lines</field>
         <field name="model">hr.contribution.register</field>
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">payroll.report_contributionregister</field>
