--- a/payroll/views/report_payslipdetails.xml
+++ b/payroll/views/report_payslipdetails.xml
@@ -3,7 +3,7 @@
     <template id="report_payslipdetails">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
-                <t t-call="web.external_layout">
+                <t t-call="web.internal_layout">
                     <div class="page">
                         <h2>Pay Slip</h2>
                         <p t-field="o.name" />
@@ -97,7 +97,7 @@
                                         <span t-esc="'..'*h['level']" />
                                         <span t-esc="h['rule_category']" />
                                     </td>
-                                    <td class="text-right">
+                                    <td class="text-end">
                                         <span
                                             t-esc="h['total']"
                                             t-esc-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'
@@ -128,13 +128,13 @@
                                     <td>
                                         <span t-esc="p.get('name', '')" />
                                     </td>
-                                    <td>
-                                        <span t-esc="p.get('quantity', '')" />
+                                    <td class="text-end">
+                                        <span t-esc="show_rate_or_quantity(p.get('rate', 0), p.get('quantity', 0))" />
                                     </td>
-                                    <td>
-                                        <span t-esc="p.get('amount', 0)" />
+                                    <td class="text-end">
+                                        <span t-esc="p.get('amount',0) if p.get('amount',0) != 0 else ''" />
                                     </td>
-                                    <td class="text-right">
+                                    <td class="text-end">
                                         <span
                                             t-esc="p.get('total', 0)"
                                             t-esc-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'
@@ -143,7 +143,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <p class="text-right">
+                        <p class="text-end">
                             <strong>Authorized signature</strong>
                         </p>
                     </div>
