payslip - vise ugovora

--- a/payroll/views/hr_payslip_views.xml
+++ b/payroll/views/hr_payslip_views.xml
@@ -283,6 +283,7 @@
                                         decoration-success="total > 0 and parent_rule_id == False"
                                         readonly="1"
                                     />
+                                    <field name="contract_id" readonly="1" />
                                 </tree>
                             </field>
                         </page>
