--- a/payroll/views/hr_rule_parameter_views.xml
+++ b/payroll/views/hr_rule_parameter_views.xml
@@ -8,6 +8,12 @@
                 <group>
                     <field name="name" required="True" />
                     <field name="code" />
+                    <field
+                        name="company_id"
+                        invisible="1"
+                        groups="base.group_multi_company"
+                        options="{'no_create': True}"
+                    />
                 </group>
 
                 <group string="Versions">
@@ -37,10 +43,11 @@
                 <field name="name" />
                 <field name="parameter_version_ids" />
                 <field
-                    name="company_id"
-                    required="1"
-                    groups="base.group_multi_company"
-                />
+                        name="company_id"
+                        groups="base.group_multi_company"
+                        options="{'no_create': True}"
+                        class="oe_inline"
+                />                
             </tree>
         </field>
     </record>
@@ -49,10 +56,17 @@
         <field name="model">hr.rule.parameter</field>
         <field name="arch" type="xml">
             <search>
+<!--
                 <field
                     name="name"
                     filter_domain="['|', ('name', 'ilike', self), ('code', 'ilike', self)]"
+                    
                 />
+-->
+                <field
+                    name="name"
+                />
+                <field name="company_id" groups="base.group_multi_company" />
             </search>
         </field>
     </record>
