--- a/payroll/wizard/hr_payroll_send_email.xml
+++ b/payroll/wizard/hr_payroll_send_email.xml
@@ -1,32 +1,32 @@
 <odoo>
     <!-- Mail template are declared in a NOUPDATE block
-         so users can freely customize/delete them -->
+         so users can freely customize/delete them
     <data noupdate="1">
+    -->
+    <data>
         <!-- Email template -->
         <record id="mail_template_hr_payslip" model="mail.template">
             <field name="name">Send payslip by email</field>
             <field name="model_id" ref="payroll.model_hr_payslip" />
-            <field name="email_from">${user.employee_id.work_email}</field>
-            <field name="email_to">${object.employee_id.address_home_id.email}</field>
-            <field name="reply_to">${user.employee_id.work_email}</field>
-            <field
-                name="subject"
-            >Payslip for ${object.payslip_run_id.name} from ${object.company_id.name}</field>
+            <field name="email_from">{{ user.email_formatted }}</field>
+            <field name="email_to">{{ object.employee_id.work_email }}</field>
+            <field name="reply_to">{{ user.email_formatted }}</field>
+            <field name="subject">{{ object.company_id.name }}: Platna lista {{ object.employee_id.name }} obracun {{ object.payslip_run_id.name }}</field>
             <field name="body_html" type="html">
     <div style="margin: 0px; padding: 0px;">
         <p style="margin: 0px; padding: 0px; font-size: 13px;">
-            Dear ${object.employee_id.name},
+            Postovani <span style="font-weight:bold;" t-out="object.employee_id.name or 'NN'" />,
             <br /><br />
-            Please find attached the payslip for ${object.payslip_run_id.name}.
+            u prilogu se nalazi obracun plate: <t t-out="object.payslip_run_id.name or 'PP'"/>.
             <br /><br />
-            Do not hesitate to contact us if you have any questions.
+            Na raspolaganju smo Vam za sva dodatna pitanja.
             <br /><br />
-            ${user.signature | safe}
+            <t t-out="user.signature or 'Referent za obracun plata'"/>
         </p>
     </div>
             </field>
             <field name="report_template" ref="payroll.action_report_payslip" />
-            <field name="lang">${object.employee_id.address_home_id.lang}</field>
+            <field name="lang">{{ object.employee_id.address_home_id.lang }}</field>
             <field name="auto_delete" eval="True" />
         </record>
     </data>
@@ -47,6 +47,7 @@
             />
             <field name="binding_model_id" ref="payroll.model_hr_payslip" />
             <field name="binding_view_types">list</field>
+
         </record>
     </data>
 </odoo>
